test/bad/arrays/decl03.px

[Int] a = []
[[Rat]] b = [a]
